# reachy-mini-mcp

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: WIKI.md
samples/: mjmodel.xml  podcast-choreographed.md
src/: __init__.py  server.py
