[tool.poetry]
name = "reachy-mini-mcp"
version = "0.2.0"
description = "MCP server for Reachy Mini robot"
authors = ["Jack C Crawford <jack@mvara.ai>", "Eclipse <eclipse@mvara.ai>", "Regenera <regenera@mvara.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.0.0"
reachy-mini = {git = "https://github.com/pollen-robotics/reachy_mini.git", branch = "develop", extras = ["mujoco"]}
openai = "^1.50.0"
websockets = "^13.0"

[tool.poetry.scripts]
reachy-mini-mcp = "src.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
